--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
                         <h1>FOLLOW</h1>
                     </li>
 
-                    <div class="row">
+                    <div class="row" style="
+                    display: flex;
+                    justify-content: left;
+                    align-items: center;
+                ">
                         <div class="col-xs-2">
                             <i class="social  fa fa-facebook" data-link="facebook"></i>
                         </div>
