--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     <meta name="mobileoptimized" content="0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- bower:css -->
-    <link rel="stylesheet" href="/assets/bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link href="/assets/bower_components/font-awesome/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 
     <!-- endbower -->
@@ -145,7 +144,7 @@
                         <h1>FOLLOW</h1>
                     </li>
 
-                    <div class="row" style="
+                    <div style="
                     display: flex;
                     justify-content: left;
                     align-items: center;
