--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <meta name="mobileoptimized" content="0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- bower:css -->
+    <link rel="stylesheet" href="/assets/bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link href="/assets/bower_components/font-awesome/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 
     <!-- endbower -->
