--- a/tuscany/index.html
+++ b/tuscany/index.html
@@ -48,7 +48,7 @@
                     type: "zoomifytileservice",
                     height: 5639,
                     width: 18489,
-                    tilesUrl: "/tuscany/"
+                    tilesUrl: "tuscany/"
                 }
             ]
         });
