--- a/pacific/index.html
+++ b/pacific/index.html
@@ -47,7 +47,7 @@
                     type: "zoomifytileservice",
                     height: 3651,
                     width: 20689,
-                    tilesUrl: "/pacific/"
+                    tilesUrl: "pacific/"
                 }
             ]
         });
