--- a/kapolei/index.html
+++ b/kapolei/index.html
@@ -48,7 +48,7 @@
                     type: "zoomifytileservice",
                     height: 18060,
                     width: 6772,
-                    tilesUrl: "/hi/"
+                    tilesUrl: "hi/"
                 }
             ]
         });
