--- a/kapolei/index.html
+++ b/kapolei/index.html
@@ -5,7 +5,7 @@
     <title>Kapolei, HI</title>
     <script type="text/javascript" src='openseadragon.min.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="/kapolei-hi.jpg" />
+    <meta property="og:image" content="https://zubair.io/kapolei/kapolei-hi.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="681" />
     <meta property="og:image:height" content="1810" />
