--- a/tuscany/index.html
+++ b/tuscany/index.html
@@ -3,17 +3,32 @@
 
 <head>
     <title>Tuscany, Italy</title>
-    <script type="text/javascript" src='openseadragon.min.js'></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="/tuscany.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="1850" />
+<meta name="title" content="Tuscany, Italy">
+<meta name="description" content="A panoramic view of Tuscany, Italy">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://zubair.io/kapolei/">
+<meta property="og:title" content="Kapolei, HI">
+<meta property="og:description" content="A panoramic view of Tuscany, Italy">
+<meta property="og:image" content="https://zubair.io/tuscany/tuscany.jpg">
+ <meta property="og:image:type" content="image/jpeg" />
+      <meta property="og:image:width" content="1850" />
     <meta property="og:image:height" content="560" />
-    <meta property="og:title" content="Tuscany, Italy" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://zubair.io/tuscany" />
-    <meta property="og:image:alt" content="A panoramic view of Tuscany, Italy" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://zubair.io/tuscany/">
+<meta property="twitter:title" content="Kapolei, HI">
+<meta property="twitter:description" content="A panoramic view of Tuscany, Italy">
+<meta property="twitter:image" content="https://zubair.io/tuscany/tuscany.jpg">
+    
+    
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script type="text/javascript" src='openseadragon.min.js'></script>
+   
+    <!-- end -->
 
     <style type="text/css">
         html,
