--- a/tuscany/index.html
+++ b/tuscany/index.html
@@ -8,8 +8,8 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://zubair.io/kapolei/">
-<meta property="og:title" content="Kapolei, HI">
+<meta property="og:url" content="https://zubair.io/tuscany/">
+<meta property="og:title" content="Tuscany, Italy">
 <meta property="og:description" content="A panoramic view of Tuscany, Italy">
 <meta property="og:image" content="https://zubair.io/tuscany/tuscany.jpg">
  <meta property="og:image:type" content="image/jpeg" />
@@ -18,7 +18,7 @@
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://zubair.io/tuscany/">
-<meta property="twitter:title" content="Kapolei, HI">
+<meta property="twitter:title" content="Tuscany, Italy">
 <meta property="twitter:description" content="A panoramic view of Tuscany, Italy">
 <meta property="twitter:image" content="https://zubair.io/tuscany/tuscany.jpg">
     
